--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rellr"
-version = "0.0.0"
+version = "0.0.1"
 edition = "2021"
 description = "Command line tool to automate the release creation process"
 repository = "https://github.com/lacodda/rellr.git"
@@ -11,5 +11,6 @@ keywords = ["cli", "tool", "release"]
 categories = ["cli"]
 
 [dependencies]
+clap = { version = "4.4.8", features = ["derive"] }
 path-absolutize = "3.1.1"
 regex = "1.10.2"
