--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,8 @@ categories = ["cli"]
 
 [dependencies]
 clap = { version = "4.4.8", features = ["derive"] }
+colored = "2"
 path-absolutize = "3.1.1"
 regex = "1.10.2"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
