--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["cli"]
 [dependencies]
 clap = { version = "4.4.8", features = ["derive"] }
 colored = "2"
+git2 = "0.18.1"
 path-absolutize = "3.1.1"
 regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
