--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ path-absolutize = "3.1.1"
 regex = "1.10.2"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+git-cliff-core = "1.4.0"
+toml = "0.8.8"
